# i3pyblocks

./: .flake8  .gitignore  LICENSE  Makefile  README.md  TODO.md  codecov.yml  default.nix  example.py  flake.nix  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  run-nix.sh  run.py  setup.cfg  setup.py  shell-dev.nix  shell.nix  test.py
.circleci/: config.yml
.github/workflows/: lint.yml  publish.yml  python-package.yml  test.yml
aio_i3status/: core.py  modules.py  test_module.py
docs/: conf.py  creating-a-new-block.rst  i3pyblocks.blocks.rst  i3pyblocks.rst  index.rst  modules.rst  user-guide.rst  why-another-i3status-replacement.rst
docs/_templates/: layout.html
i3pyblocks/: __init__.py  __main__.py  __version__.py  cli.py  core.py  formatter.py  modules.py  types.py  utils.py  version
i3pyblocks/_internal/: formatter.py  logger.py  misc.py  models.py  subprocess.py  utils.py
i3pyblocks/blocks/: __init__.py  aiohttp.py  aionotify.py  base.py  basic.py  datetime.py  dbus.py  http.py  i3ipc.py  inotify.py  ps.py  psutil.py  pulse.py  pulsectl.py  shell.py  subprocess.py  x11.py  xlib.py
i3pyblocks/modules/: __init__.py  aionotify.py  base.py  datetime.py  i3ipc.py  psutil.py  pulsectl.py  subprocess.py  time.py
nix/: i3pyblocks.nix
pkgs/: aionotify.nix  i3pyblocks.nix  nixpkgs-src.nix
requirements/: dev.in  main.in  meta.in
tests/: conftest.py  test_cli.py  test_core.py  test_formatter.py  test_main.py  test_modules.py  test_utils.py
tests/_internal/: test_formatter.py  test_misc.py  test_subprocess.py  test_subprocess_.py  test_utils_.py
tests/blocks/: test_aiohttp.py  test_aionotify.py  test_base.py  test_basic.py  test_datetime.py  test_dbus.py  test_http.py  test_i3ipc.py  test_inotify.py  test_ps.py  test_psutil.py  test_pulse.py  test_pulsectl.py  test_shell.py  test_subprocess.py  test_x11.py  test_xlib.py
tests/helpers/: misc.py  task.py
tests/modules/: psutil.py  pulsectl.py  test_aionotify.py  test_base.py  test_datetime.py  test_i3ipc.py  test_modules.py  test_psutil.py  test_pulsectl.py  test_subprocess.py  test_time.py
