[tool.poetry]
name = "i3pyblocks"
version = "0.0.1"
description = "A replacement for i3status, written in Python using asyncio"
authors = ["Thiago Kenji Okada <thiagokokada@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.6"
pulsectl = "^18.12"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
mypy = "^0.720.0"
pytest = "^5.1"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pytest-mypy = "^0.3.3"
flake8-bugbear = "^19.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
