[tool.poetry]
name = "i3pyblocks"
version = "0.0.1"
description = "A replacement for i3status, written in Python using asyncio"
authors = ["Thiago Kenji Okada <thiagokokada@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.7"
pulsectl = "^20.2"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7"
mypy = "^0.770.0"
pytest = "^5.4"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"
pytest-mock = "^3.0"
pytest-mypy = "^0.6.1"
flake8-bugbear = "^20.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
