[tool.poetry]
name = "i3pyblocks"
version = "0.1.0"
description = "A replacement for i3status, written in Python using asyncio"
authors = ["Thiago Kenji Okada <thiagokokada@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
psutil = {version = "^5.7.0", optional = true}
pulsectl = {version = "^20.4.3", optional = true}
aionotify = {version = "^0.2.0", optional = true}
i3ipc = {version = "^2.2.1", optional = true}

[tool.poetry.extras]
psutil = ["psutil"]
pulsectl = ["pulsectl"]
aionotify = ["aionotify"]
i3ipc = ["i3ipc"]
all_deps = ["psutil", "pulsectl", "aionotify", "i3ipc"]

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7"
mypy = "^0.770.0"
pytest = "^5.4"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"
pytest-mock = "^3.0"
pytest-mypy = "^0.6.1"
flake8-bugbear = "^20.1"
aioconsole = "^0.1.16"
asynctest = "^0.13.0"
setuptools-scm = "^3.5.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
