[metadata]
name = i3pyblocks
version = attr: i3pyblocks.__version__.__version__
author = Thiago Kenji Okada
author_email = thiagokokada@gmail.com
description = A replacement for i3status, written in Python using asyncio.
url = https://i3pyblocks.readthedocs.io
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts = i3pyblocks = i3pyblocks.cli:main

[options.extras_require]
blocks.dbus = dbus-next>=0.1.1
blocks.http = aiohttp>=3.4.0
blocks.i3ipc = i3ipc>=2.0.1
blocks.inotify = aionotify>=0.2.0
blocks.ps = psutil>=5.4.8
blocks.pulse = pulsectl>=18.10.5
blocks.x11 = python-xlib>=0.2.8
dev =
    black
    flake8
    flake8-bugbear
    isort
    mypy
    pip-tools
    types-chardet
    types-mock
    types-setuptools
    types-toml
docs = sphinx; sphinx-autoapi; sphinx-rtd-theme
test =
    mock>=4.0
    pytest
    pytest-aiohttp
    pytest-asyncio
    pytest-cov

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E501,W503,E203,B006
per-file-ignores =
    */__init__.py: E402, F401

[mypy]
ignore_missing_imports=True
pretty=True

[pytest]
norecursedirs=tests/helpers

[isort]
multi_line_output=3
include_trailing_comma=True
line_length=88
src_paths=i3pyblocks,test

[tool:pytest]
addopts=-vvv -rxs --disable-warnings
